Bug 1587962 - [10.15] "Use keyboard navigation" and "jump to spot" scrolling preferences do not work r=spohl a=lizzard

Update sandbox rules to allow services and files needed for global UI system preferences.

Update tests now that stat() calls on the filesystem are permitted.

Differential Revision: https://phabricator.services.mozilla.com/D50298

--HG--
extra : source : 629a1370d01b1ce3ddd0b6d0149a17e6c842a7e1