security/sandbox/mac/SandboxPolicyContent.h
@@ -69,15 +69,15 @@ static const char SandboxPolicyContent[] = R"SANDBOX_LITERAL(
         (subpath "/Library/Filesystems/NetFSPlugins")
         (subpath "/usr/share"))))
 
+  ; For stat and symlink resolution
+  (allow file-read-metadata (subpath "/"))
+
   ; Timezone
   (allow file-read*
     (subpath "/private/var/db/timezone")
     (subpath "/usr/share/zoneinfo")
     (subpath "/usr/share/zoneinfo.default")
     (literal "/private/etc/localtime"))
-
-  ; Top-level directory metadata access (bug 1404298)
-  (allow file-read-metadata (regex #"^/[^/]+$"))
 
   ; Allow read access to standard special files.
   (allow file-read*
@@ -172,6 +172,7 @@ static const char SandboxPolicyContent[] = R"SANDBOX_LITERAL(
   (if (string=? hasWindowServer "TRUE")
     (allow mach-lookup (global-name "com.apple.windowserver.active")))
   (allow mach-lookup
+    (global-name "com.apple.system.opendirectoryd.libinfo")
     (global-name "com.apple.CoreServices.coreservicesd")
     (global-name "com.apple.coreservices.launchservicesd")
     (global-name "com.apple.lsd.mapdb"))
@@ -205,12 +206,23 @@ static const char SandboxPolicyContent[] = R"SANDBOX_LITERAL(
       (iokit-property "MetalPluginName")
       (iokit-property "MetalPluginClassName")))
 
-; depending on systems, the 1st, 2nd or both rules are necessary
+  ; depending on systems, the 1st, 2nd or both rules are necessary
   (allow user-preference-read (preference-domain "com.apple.HIToolbox"))
   (allow file-read-data (literal "/Library/Preferences/com.apple.HIToolbox.plist"))
 
   (allow user-preference-read (preference-domain "com.apple.ATS"))
-  (allow file-read-data (literal "/Library/Preferences/.GlobalPreferences.plist"))
+
+  ; Needed for some global preferences (such as scrolling behavior)
+  (allow file-read-data
+      (literal "/Library/Preferences/.GlobalPreferences.plist")
+      (home-literal "/Library/Preferences/.GlobalPreferences.plist")
+      (home-regex #"/Library/Preferences/ByHost/\.GlobalPreferences.*"))
+      (home-literal "/Library/Preferences/com.apple.universalaccess.plist")
+  (allow mach-lookup
+      (global-name "com.apple.cfprefsd.agent")
+      (global-name "com.apple.cfprefsd.daemon"))
+  (allow ipc-posix-shm-read-data
+      (ipc-posix-name-regex #"^apple\.cfprefs\..*"))
 
   (allow file-read*
       (subpath "/Library/ColorSync/Profiles")
@@ -245,10 +257,6 @@ static const char SandboxPolicyContent[] = R"SANDBOX_LITERAL(
         (allow file-read* (subpath testingReadPath3)))
       (when testingReadPath4
         (allow file-read* (subpath testingReadPath4)))))
-
-  (allow file-read-metadata (home-subpath "/Library"))
-
-  (allow file-read-metadata (subpath "/private/var"))
 
   ; bug 1303987
   (if (string? debugWriteDir)
